Fixed the Clock and Message status alignments

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body {
 .grid-cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 1rem;
+  grid-gap: 1rem;
 }
 
 .blog-card > .link-button {
@@ -148,6 +148,14 @@ body {
 
 .blog-card > img {
   width: 100%;
+}
+
+.status {
+  display: flex;
+  align-items: center;
+}
+.status > p {
+  margin: 0 1rem;
 }
 /* --------------------- */
 
